--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "exploring-nasdaq",
   "version": "0.1.0",
-  "homepage": "https://{ramandeepsingh2402}.github.io/nasdaq-exlporer",
+  "homepage": "https://ramandeepsingh2402.github.io/nasdaq-exlporer",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
